# NLP_PDC_Proj

./: .gitignore  A_config.py  B_extract_datasets.py  C_data_loader.py  D_preprocess.py  E_retriever.py  F_llm_generator.py  G_serial_rag.py  H_parallel_rag.py  I_evaluate.py  J_write_materials.py  K_convert_deliverables.py  L_main.py  M_create_colab_notebook.py  README.md  __init__.py  config.yaml  graphrag_colab_pipeline.ipynb  log.txt  log_2.txt  pyproject.toml  requirements.txt
