[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-agentic-graphrag"
version = "1.0.0"
description = "Course-scale medical evidence-grounded RAG benchmark with serial and parallel retrieval."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.19.0",
  "scikit-learn>=1.4.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "requests>=2.32.0",
  "python-docx>=1.1.0",
  "python-pptx>=0.6.23",
  "reportlab>=4.1.0",
  "anthropic>=0.40.0",
  "pyyaml>=6.0.1",
  "joblib>=1.3.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[tool.setuptools]
py-modules = [
  "A_config",
  "B_extract_datasets",
  "C_data_loader",
  "D_preprocess",
  "E_retriever",
  "F_llm_generator",
  "G_serial_rag",
  "H_parallel_rag",
  "I_evaluate",
  "J_write_materials",
  "K_convert_deliverables",
  "L_main",
  "M_create_colab_notebook",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
